--- a/css/styles.css
+++ b/css/styles.css
@@ -34,20 +34,20 @@ body {
     height: 5rem;
     width: auto;
     z-index: 1;
+}
 
-    &__link {
-        font-size: 1.5rem;
-        color: #fff;
-        margin-left: 1.25rem;
-        text-decoration: none;
-        text-shadow: 0 0 .375rem #222222;
-        transition: color .4s ease;
+.navigation__link {
+    font-size: 1.5rem;
+    color: #fff;
+    margin-left: 1.25rem;
+    text-decoration: none;
+    text-shadow: 0 0 0.375rem #222222;
+    transition: color 0.4s ease;
+}
 
-        &:hover {
-            color: #ffa600;
-            text-shadow: .0625rem .0625rem .125rem #222222;
-        }
-    }
+.navigation__link:hover {
+    color: #ffa600;
+    text-shadow: 0.0625rem 0.0625rem 0.125rem #222222;
 }
 
 /* Content */
@@ -113,15 +113,15 @@ button {
     height: 2.5rem;
     outline: none;
     padding: 0.5rem 1.8rem 0.5rem 1.8rem;
+}
 
-    &:hover {
-        filter: brightness(110%);
-    }
+button:hover {
+    filter: brightness(110%);
+}
 
-    &:active {
-        transform: translate(0, 0.3rem);
-        box-shadow: 0 0.1rem rgba(255, 255, 255, 0.65);
-    }
+button:active {
+    transform: translate(0, 0.3rem);
+    box-shadow: 0 0.1rem rgba(255, 255, 255, 0.65);
 }
 
 /* Loader */
@@ -152,72 +152,70 @@ button {
 /* Footer */
 .footer {
     background: linear-gradient(130deg, #554D4A 0%, #888 60%, #524B45 100%);
-    box-shadow: 0 -.25rem .25rem rgba(0, 0, 0, 0.5);
+    box-shadow: 0 -0.25rem 0.25rem rgba(0, 0, 0, 0.5);
     color: #ffa600;
     font-size: 1rem;
-    text-shadow: .0625rem .0625rem .125rem #222222;
+    text-shadow: 0.0625rem 0.0625rem 0.125rem #222222;
+}
 
-    &__container {
-        display: grid;
-        margin: 0 auto;
-        max-width: 75rem;
-    }
+.footer__container {
+    display: grid;
+    margin: 0 auto;
+    max-width: 75rem;
+}
 
-    &__column {
-        border-left: .0625rem solid #bbb;
-        margin: 1.5rem 0;
-        padding: 0 1rem;
+.footer__column {
+    border-left: 0.0625rem solid #bbb;
+    margin: 1.5rem 0;
+    padding: 0 1rem;
+}
 
-        &:first-child {
-            border: 0;
-        }
+.footer__column:first-child {
+    border: 0;
+}
 
-        > ul > li {
-            list-style-type: none;
-            margin: 0.1875rem 0;
-        }
-    }
+.footer__column > ul > li {
+    list-style-type: none;
+    margin: 0.1875rem 0;
+}
 
-    &__link {
-        color: #fefefe;
-        text-decoration: none;
-        transition: color .4s ease, text-decoration .4s ease;
+.footer__link {
+    color: #fefefe;
+    text-decoration: none;
+    transition: color 0.4s ease, -webkit-text-decoration 0.4s ease;
+    transition: color 0.4s ease, text-decoration 0.4s ease;
+    transition: color 0.4s ease, text-decoration 0.4s ease, -webkit-text-decoration 0.4s ease;
+}
 
-        &:hover {
-            color: #00d4ff;
-            text-decoration: underline;
-        }
-    }
+.footer__link:hover {
+    color: #00d4ff;
+    text-decoration: underline;
+}
 
-    &__sub {
-        background: linear-gradient(130deg, #554D4A 0%, #444 50%, #524B45 100%);
-        font-size: 0.75rem;
-        padding: 1rem 2rem;
-        text-align: center;
-    }
+.footer__sub {
+    background: linear-gradient(130deg, #554D4A 0%, #444 50%, #524B45 100%);
+    font-size: 0.75rem;
+    padding: 1rem 2rem;
+    text-align: center;
 }
 
 @media only screen and (max-width: 575px) {
-    .footer {
-        &__container {
-            grid-template-columns: repeat(1, 1fr);
-        }
+    .footer__container {
+        grid-template-columns: repeat(1, 1fr);
+    }
 
-        &__column {
-            border-left: none;
-        }
+    .footer__column {
+        border-left: none;
     }
 }
 
 @media only screen and (min-width: 576px) and (max-width: 1023px) {
-    .footer {
-        &__container {
-            grid-template-columns: repeat(2, 1fr);
-        }
+    .footer__container {
+        grid-template-columns: repeat(2, 1fr);
+    }
 
-        &__column:nth-child(odd) {
-            border-left: none;
-        }
+    .footer__column:nth-child(odd) {
+        border-left: none;
     }
 }
 
